Ne chrome extension

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trust365 Password Manager</title>
+  <title>Datasurance Password Manager</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
       box-sizing: border-box;
     }
     header {
-      background-color: red;
+      background-color: #00A9B5;
       color: white;
       padding: 5px;
       text-align: center;
@@ -32,7 +32,7 @@
     h1 { font-size: 20px; }
     h2 { font-size: 18px; }
     footer {
-      background-color: red;
+      background-color: #00A9B5;
       color: white;
       padding: 8px;
       text-align: center;
@@ -61,7 +61,7 @@
       margin: 20px 0;
     }
     .logo img {
-      width: 50px;
+      width: 150px;
       height: auto;
     }
     .login-container, .password-container {
@@ -78,7 +78,7 @@
       box-sizing: border-box;
     }
     button {
-      background-color: red;
+      background-color: #00A9B5;
       color: white;
       padding: 10px 15px;
       border-radius: 5px;
@@ -88,7 +88,7 @@
       margin-bottom: 10px;
     }
     button:hover {
-      background-color: darkred;
+      background-color: #01848d;
     }
     .password-container {
       text-align: center;
@@ -98,7 +98,7 @@
 </head>
 <body>
   <header>
-    <h1>Trust365 Password Manager<button id="logoutButton">Logout</button>
+    <h1>Datasurance Password Manager<button id="logoutButton">Logout</button>
 </h1>
   </header>
 
